--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "formik": "^2.4.5",
     "install": "^0.13.0",
     "md5": "^2.3.0",
     "npm": "^10.5.2",
@@ -15,7 +16,8 @@
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "node --openssl-legacy-provider node_modules/react-scripts/scripts/start.js",
